[package]
name = "ddc-primitives"
version = "4.8.4"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"], optional = true }

sp-core = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "aa62c739ab004a900d54f738c5e5a25f492fe07c" }
sp-runtime = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "aa62c739ab004a900d54f738c5e5a25f492fe07c" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-runtime/std",
]
runtime-benchmarks = []
