[package]
name = "ddc-primitives"
version = "4.8.4"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"], optional = true }

sp-core = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "18c32ed818d8d03671398b23b48ac77db47f7929" }
sp-runtime = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "18c32ed818d8d03671398b23b48ac77db47f7929" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-runtime/std",
]
runtime-benchmarks = []
