[package]
name = "pallet-ddc-clusters"
version = "4.8.4"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
ddc-primitives = { version = "4.8.4", default-features = false, path = "../../primitives" }
ddc-traits = { version = "4.8.4", default-features = false, path = "../../traits" }
frame-benchmarking = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0", optional = true }
frame-support = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
frame-system = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
hex-literal = "^0.3.1"
pallet-contracts = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
pallet-ddc-nodes = { version = "4.7.0", default-features = false, path = "../ddc-nodes" }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"], optional = true }
sp-runtime = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-std = { default-features = false, git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
hex-literal = "^0.3.1"
pallet-balances = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
pallet-randomness-collective-flip = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
pallet-timestamp = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-core = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-io = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
sp-tracing = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }
substrate-test-utils = { git = "https://github.com/yahortsaryk/substrate.git", rev = "708deee039adadd94e527a779903daff7944bdc0" }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "ddc-primitives/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-contracts/std",
  "pallet-ddc-nodes/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "ddc-primitives/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
